versão com o HTML e o CSS da página 'quem somos' inciado

--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -4,41 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
-    <link rel="stylesheet" href="geral.css">
+    <link rel="stylesheet" href="/Site/Geral.css">
+    <link rel="stylesheet" href="Somos.css">
     <title>Quinhentismo - Sobre nós</title>
 </head>
 <body>
 
     <header>
     <ul>
-        <li>Quinhentismo</li>
-        <li>Sobre nós</li>
+        <li id="estamos">Sobre nós</li>
+        <li>♦</li>
+        <a href="/Site/Quinhentismo/Quinhentismo.html">
+            <li>Quinhentismo</li>
+        </a>
     </ul>
     </header>
 
 
-    <div>
+    <div class="titulo">
         <h1>Olá, venha nos conhecer!</h1>
         <img src="/Site/Imagens/barco - livro - lupa.png" alt="">
     </div>
 
 
-    <h2>Nossa proposta</h2>
-    <p></p>
+    <div id="proposta">
+        <h2>Nossa proposta</h2>
+        <br>
+        <p>Nossa proposta com este blog é explorar profundamente o Quinhentismo, mergulhando nos principais autores, obras e características desse período tão fascinante. Além de ampliar nosso conhecimento sobre essa fase histórica, também temos o objetivo de aprimorar nossas habilidades em HTML, CSS e JavaScript, ferramentas essenciais para criar um conteúdo web de qualidade. Todos nós somos alunos do Instituto J&F, e estamos empenhados em tornar essa experiência não apenas educativa, mas também divertida. Acreditamos que, ao combinar aprendizado com diversão, conseguiremos criar um projeto que seja tanto enriquecedor quanto prazeroso.
+        </p>
+    </div>
 
+    <div class="time">
+        <img src="/Site/Imagens/Desenvolvedores - imagem.jpg" alt="">
+        <div>
+            <h2>Time de desenvolvimento</h2>
+            <br>
+            <p>Nosso time de desenvolvimento é composto por Karina Shimoiizaka Martins, que trabalhou no HTML e CSS das páginas; Theo Correia Martins, responsável pelo JavaScript; e Matheus Hideki Oshiro Ueno, que cuidou do design do site. Cada um contribuiu com suas habilidades específicas para criar um blog funcional e bem estruturado.</p>
+        </div>
+    </div>
 
-    <h2>Time de desenvolvimento</h2>
-    <img src="" alt="">
-    <p></p>
-
-
-    <h2>Time de pesquisa</h2>
-    <p></p>
-    <img src="" alt="">
+    <div class="time" id="pesquisa">
+        <div>
+            <h2>Time de pesquisa</h2>
+            <br>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut et eligendi praesentium in ipsum consectetur vitae neque quaerat. Nostrum nihil, consequuntur at beatae inventore optio perferendis libero ad voluptatem atque numquam, ullam deserunt dolores nesciunt. Recusandae perspiciatis nisi distinctio delectus consequatur rerum ullam ratione?</p>
+        </div>
+        <img src="/Site/Imagens/Pesquisadores - imagem.jpg" alt="">
+    </div>
 
 
     <h2>Nossos contatos</h2>
-    <!-- eu pretendo colocar o youtube e o e-mail de alguém -->
+    <img src="/Site/Imagens/email - icon.png" alt="">
+    <img src="/Site/Imagens/youtbe - imagem.png" alt="">
 
 
     <footer>
