essa versão conta com o cabeçalho bonitinho queue te mandei no whats, além de algumas fontes que eu estou tesntando mas nada d+

--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -6,19 +6,36 @@
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
     <link rel="stylesheet" href="/Site/Geral.css">
     <link rel="stylesheet" href="Somos.css">
+
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+
     <title>Quinhentismo - Sobre nós</title>
 </head>
 <body>
 
     <header>
-    <ul>
-        <li id="estamos">Sobre nós</li>
-        <li>♦</li>
-        <a href="/Site/Quinhentismo/Quinhentismo.html">
-            <li>Quinhentismo</li>
-        </a>
-    </ul>
+        <img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef">
+        <img src="/Site/Imagens/tituo - quinhentismo.png" alt="">
+        <div>
+            <img src="/Site/Imagens/youtube - icon - certo.png" alt="">
+            <img src="/Site/Imagens/mail - icon -certo.png" alt="">
+        </div>
     </header>
+
+    <nav>
+        <ul>
+            <li id="estamos">Sobre nós</li>
+            <li>♦</li>
+                <li><a href="/Site/Quinhentismo/Quinhentismo.html">Quinhentismo</a></li>
+        </ul>
+    </nav>
 
 
     <div class="titulo">
@@ -52,10 +69,15 @@
         <img src="/Site/Imagens/Pesquisadores - imagem.jpg" alt="">
     </div>
 
+    <div class="contatos">
+    
+        <h2>Nossos contatos</h2>
+        <div>
+            <img src="/Site/Imagens/email - icon.png" alt="">
 
-    <h2>Nossos contatos</h2>
-    <img src="/Site/Imagens/email - icon.png" alt="">
-    <img src="/Site/Imagens/youtbe - imagem.png" alt="">
+            <img id="youtube" src="/Site/Imagens/youtbe - imagem.png" alt="">
+        </div>
+    </div>
 
 
     <footer>
@@ -76,6 +98,6 @@
     </footer>
 
 
-    <p>Feito pelo 1°G TECH 2024</p>
+    <p id="donos">Feito pelo 1°G TECH 2024</p>
 </body>
 </html>
