mesma coisa que a ultima atualização só adicionei um título

--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -88,6 +88,8 @@
         <img src="/Site/Imagens/instituto - imagem larga.jpg" alt="">
     </div>
 
+    <div id="galeira"><img src="/Site/Imagens/galeria dos colaboradores.png" alt=""></div>
+
     <div class="time">
         <img src="/Site/Imagens/desenvolvedores - moldura.png" alt="">
         <div>
