Versão com a página de opções do quinhentismo

--- a/Site/Quinhentismo/Quinhentismo.html
+++ b/Site/Quinhentismo/Quinhentismo.html
@@ -4,10 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Style_pagina_principal.css">
+    <link rel="stylesheet" href="/Site/Geral.css">
     <script src="Script_pagina_principal.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="Quinhentismo.css">
+
+
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
+
+
+
+
+    <header>
+        <img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef">
+        <img src="/Site/Imagens/quinhentisando - titulo.png" alt="">
+        <div>
+            <img src="/Site/Imagens/youtube - icon - certo.png" alt="">
+            <img src="/Site/Imagens/mail - icon -certo.png" alt="">
+        </div>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="/Site/Somos/Somos.html">Sobre nós</a></li>
+            <li>♦</li>
+                <li id="estamos" >Quinhentismo</li>
+            <li>♦</li>
+                <li><a href="/Site/referencias/fontes.html">Referências</a></li>
+        </ul>
+    </nav>
+
+
+
+
+
+    <div class="quadradoDeConteudo" id="contexto">
+        <div>
+            <h2>Contexto histórico</h2>
+        </div>
+    </div>
+    <div class="quadradoDeConteudo" id="caracteristicas">
+        <div>
+            <h2>Características</h2>
+        </div>
+    </div>
+    <div class="quadradoDeConteudo" id="autores">
+        <div>
+            <h2>Principais Autores</h2>
+        </div>
+    </div>
+    <div class="quadradoDeConteudo" id="obras">
+        <div>
+            <h2>Principais Obras</h2>
+        </div>
+    </div>
+
+
+
+
+    <footer>
+            <box>
+            <div>
+            <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
+            <h4>-Antônio Gomes Lacerda</h4>
+            </div>
+                <div>
+                    <h3>Explore</h3>
+                    <p>Voltar para o ínicio</p>
+                    <p>Sobre nós</p>
+                    <p>Referências</p>
+                    <p>Quinhentismo</p>
+                </div>
+                <div>
+                    <h3>Descubra</h3>
+                    <p>Classicismo: vídeo</p>
+                </div>
+            </box>
+            <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
+    </footer>
+
+    <br>
+
+
+
 </body>
 </html>
