Roteiro pro html

--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
     <link rel="stylesheet" href="/Site/Geral.css">
-    <link rel="stylesheet" href="Somos.css">
+    <link rel="stylesheet" href="Style_somos.css">
 
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
