--- a/Site/Quinhentismo_inicial/Menu_quinhentismo.html
+++ b/Site/Quinhentismo_inicial/Menu_quinhentismo.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quinhentismo - Menu</title>
     <link rel="stylesheet" href="Style_pagina_principal.css">
+    <link rel="stylesheet" href="/Site/Geral.css">
     <script src="Script_pagina_principal.js" type="text/javascript" defer></script>
 </head>
 <body>
