Fiz as alterações, na parte do contexto eu criei um novo arquivo, porque eu mudei bastante coisa, daí vc dá uma olhadinha pra ver se tá na mesta estrutura do outro

--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quinhentismo - Menu</title>
-    <link rel="stylesheet" href="Style_pagina_principal.css">
+    <link rel="stylesheet" href="Style_menu_quinhentismo.css">
     <link rel="stylesheet" href="/Site/Geral.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,11 +61,9 @@
     </div>
     <div class="quadradoDeConteudo" id="obras">
         <div>
-            <h2>Principais Obras</h2>
+            <h2>Vídeos sobre o assunto</h2>
         </div>
     </div>
-
-
 
 
     <footer>
