--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -29,14 +29,27 @@
         <div id="oqEh">
             <h1>O Que é o Quinhentismo?</h1>
             <div id="txt2">
-                <p>O Quinhentismo abrange o período de 1500 a 1601 e é composto pelos primeiros textos produzidos no Brasil ou sobre o Brasil. Durante esse tempo, os escrivães e cronistas relataram suas impressões e experiências, formando uma base literária essencial para o país.</p>
+                <p>O Quinhentismo abrange o período de 1500 a 1601 e é composto pelos primeiros textos produzidos no Brasil ou sobre o Brasil. Durante esse tempo, os escrivães e cronistas relataram suas impressões e experiências, marcando o pontapé inicial da produção literária no país.</p>
             </div>
         </div>
         <div id="caracteristicas">
             <h2>Características Principais:</h2>
             <ul>
-                <li>Literatura de Informação: Textos que descrevem detalhes sobre as terras e seus habitantes.</li>
-                <li>Relatos de Viagens: Narrativas que destacam as experiências dos viajantes durante as Grandes Navegações.</li>
+                <li>
+                    Literatura de Informação: Os textos da época priorizavam a descrição das terras brasileiras, da fauna e flora, dos povos indígenas e dos seus costumes.
+                </li>
+                <li>
+                    Relatos de Viagens: Narrativas que destacam as experiências dos viajantes durante as Grandes Navegações.
+                </li>
+                <li>
+                    Visão eurocêntrica: A maioria dos autores, portugueses, apresentava uma visão eurocêntrica, valorizando a cultura europeia e subestimando a indígena. 
+                </li>
+                <li>
+                    Falta de aprofundamento: Geralmente, os textos não apresentavam análises críticas ou reflexões mais profundas sobre a realidade brasileira. 
+                </li>
+                <li>
+                    Diversidade de gêneros: Apesar da predominância da prosa descritiva, também encontramos crônicas, cartas, relatórios e até mesmo poemas.
+                </li>
             </ul>
         </div>
 
