versão com as imagens e com os links na página do menu

--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -44,24 +44,30 @@
 
 
 
-    <div class="quadradoDeConteudo" id="contexto">
-        <div>
-            <h2>Contexto histórico</h2>
+    <a href="/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html">
+        <div class="quadradoDeConteudo" id="contexto">
+            <div>
+                <h2>Contexto histórico</h2>
+            </div>
         </div>
-    </div>
-    <div class="quadradoDeConteudo" id="caracteristicas">
-        <div>
-            <h2>Características</h2>
+    </a>
+    <a href="/Site/Quinhentismo/Quinhentismo_principal.html">
+        <div class="quadradoDeConteudo" id="caracteristicas">
+            <div>
+                <h2>Características</h2>
+            </div>
         </div>
-    </div>
-    <div class="quadradoDeConteudo" id="autores">
-        <div>
-            <h2>Principais Autores</h2>
+    </a>
+    <a href="/Site/Quinhentismo_autores/Autores.html">
+        <div class="quadradoDeConteudo" id="autores">
+            <div>
+                <h2>Principais autores e obras</h2>
+            </div>
         </div>
-    </div>
+    </a>
     <div class="quadradoDeConteudo" id="obras">
         <div>
-            <h2>Vídeos sobre o assunto</h2>
+            <h2>Vídeos relacionados</h2>
         </div>
     </div>
 
