--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -17,12 +17,10 @@
     
     <container id="pg1">
         <h1>Quinhentismo: A Primeira Manifestação Literária no Brasil</h1>
-        <div id="imagens_pg1">
-
-        </div>
         <div id="txt1">
             <p>O Quinhentismo marca um período fundamental na literatura brasileira, representando a primeira expressão literária em nosso território. Conhecido como "literatura de informação", esse movimento foi responsável por descrever as novas terras descobertas pelos portugueses no século XVI, revelando a fauna, flora e culturas indígenas. Neste post, exploraremos as características, contexto histórico e os principais autores desse período fascinante.</p>
         </div>
+        <img src="imagens - caracteristicas/chegada.jpeg" alt="">
     </container>
 
     <container id="pg2">
@@ -51,6 +49,7 @@
                     Diversidade de gêneros: Apesar da predominância da prosa descritiva, também encontramos crônicas, cartas, relatórios e até mesmo poemas.
                 </li>
             </ul>
+            <img src="imagens - caracteristicas/indios.jpeg" alt="">
         </div>
 
     </container>
