--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -15,6 +15,8 @@
         <h2>1. Pero Vaz de Caminha</h2>
         <p>Pero Vaz de Caminha nasceu no Porto, Portugal, e foi um dos principais cronistas do período. Ele ocupou cargos importantes, como mestre da balança da Casa da Moeda e vereador da cidade do Porto. Sua obra mais famosa, A Carta de Pero Vaz de Caminha, foi escrita em 1500 e enviada ao Rei Dom Manuel I, relatando suas impressões sobre as terras recém-descobertas no Brasil e os encontros com os indígenas. Caminha é considerado um dos fundadores da literatura brasileira, e sua carta é um documento histórico fundamental</p>
 
+        <img src="imagens - autores/pero vaz de caminha.jpg" alt="">
+
         <h3>Principais obras:</h3>
         <ul>
             <li>
@@ -24,35 +26,43 @@
                 A Carta do Descobrimento do Brasil (1500) 
             </li>
         </ul>
+
+        <img src="imagens - autores/obra pero.jpg" alt="">
     </div>
 
     <div id="anchieta">
         <h2>2. José de Anchieta</h2>
         <p>Nascido em San Cristóbal de la Laguna, na Espanha, Anchieta ingressou na Companhia de Jesus e se mudou para o Brasil para catequizar os indígenas. Ele é reconhecido não apenas como um autor, mas também como um santo da Igreja Católica. Anchieta escreveu diversas obras, incluindo poesias e peças teatrais, sendo Auto da festa do Natal (1561) e Feitos de Mem de Sá (1563) algumas de suas contribuições mais significativas. Sua obra reflete sua profunda espiritualidade e seu compromisso com a evangelização.</p>
+        <img src="imagens - autores/Pe. José de Anchieta.png" alt="">
         <h3>Principais obras:</h3>
         <ul>
             <li>Auto da festa do Natal (1561)</li>
             <li> Feitos de Mem de Sá (1563)</li>
         </ul>
+        <img src="imagens - autores/obra pe jose.png" alt="">
     </div>
 
     <div id="nobrega">
         <h2>3. Padre Manuel da Nóbrega</h2>
         <p>Natural de Sanfins do Douro, Portugal, Manuel da Nóbrega se formou em direito canônico e filosofia na Universidade de Coimbra. Ele foi um dos fundadores da cidade de São Paulo e dedicou sua vida à catequese dos indígenas. Suas obras, como Diálogos Sobre a Conversão do Gentio (1557) e Cartas do Brasil (1549-1570), abordam as questões éticas da colonização e a luta pela liberdade dos nativos. Nóbrega é visto como uma figura central na literatura e na história do Brasil.</p>
+        <img src="imagens - autores/Pe. Manuel da Nóbrega.png" alt="">
         <h3>Principais obras</h3>
         <ul>
             <li>Diálogos Sobre a Conversão do Gentio (1557)</li>
             <li>Cartas do Brasil (1549-1570)</li>
         </ul>
+        <img src="imagens - autores/obra Pe manual.png" alt="">
     </div>
 
     <div id="hans">
         <h2>4. Hans Staden</h2>
         <p>Hans Staden nasceu na Alemanha e é conhecido por suas duas viagens ao Brasil, que resultaram no livro Duas Viagens ao Brasil (1557). Durante sua estadia, foi capturado pelos índios tupinambás e passou nove meses em cativeiro, experiência que relatou com riqueza de detalhes. Sua obra é uma das primeiras a oferecer uma visão externa sobre a vida indígena e as práticas culturais da época, tornando-se um importante testemunho histórico.</p>
+        <img src="imagens - autores/Hans Staden.png" alt="">
         <h3>Principal obra</h3>
         <ul>
             <li>Duas Viagens ao Brasil (1557)</li>
         </ul>
+        <img src="imagens - autores/obra 2 Hans Staden.jpg" alt="">
     </div>
 </body>
 </html>
