--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -13,6 +13,7 @@
             <p>Foi no século XVI, entre os anos de 1500 e 1601, que floresceu no Brasil um período literário conhecido como Quinhentismo ou Literatura de Informação. Neste post, exploraremos o contexto histórico deste movimento fascinante.
             </p>
         </div>
+        <img src="imagens-contexto/indios .jpeg" alt="">
     </conteiner>
 
 
@@ -42,13 +43,14 @@
                 </li>
                 </ul>
             </div>
+            <img src="imagens-contexto/padres.jpeg" alt="">
     </conteiner>
     
     <conteiner id="final">
         <div id="implicacos">
             <h2>Implicações da Literatura de Informação</h2>
             <div id="txt4">
-                <p>Para entendermos melhor esse contexto histórico, vamos viajar no tempo:</p>
+                <p>Os textos produzidos durante o Quinhentismo não apenas informavam sobre as novas terras, mas também moldavam a visão europeia sobre o Brasil. Essas obras são essenciais para compreender a formação da identidade cultural brasileira e as interações entre colonizadores e indígenas.</p>
             </div>
         </div>
 
