minha parte do contexto ainda não finalizada

--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -46,7 +46,7 @@
         <h2>3. Padre Manuel da Nóbrega</h2>
         <p>Natural de Sanfins do Douro, Portugal, Manuel da Nóbrega se formou em direito canônico e filosofia na Universidade de Coimbra. Ele foi um dos fundadores da cidade de São Paulo e dedicou sua vida à catequese dos indígenas. Suas obras, como Diálogos Sobre a Conversão do Gentio (1557) e Cartas do Brasil (1549-1570), abordam as questões éticas da colonização e a luta pela liberdade dos nativos. Nóbrega é visto como uma figura central na literatura e na história do Brasil.</p>
         <img src="imagens - autores/Pe. Manuel da Nóbrega.png" alt="">
-        <h3>Principais obras</h3>
+        <h3>Principais obras:</h3>
         <ul>
             <li>Diálogos Sobre a Conversão do Gentio (1557)</li>
             <li>Cartas do Brasil (1549-1570)</li>
@@ -58,7 +58,7 @@
         <h2>4. Hans Staden</h2>
         <p>Hans Staden nasceu na Alemanha e é conhecido por suas duas viagens ao Brasil, que resultaram no livro Duas Viagens ao Brasil (1557). Durante sua estadia, foi capturado pelos índios tupinambás e passou nove meses em cativeiro, experiência que relatou com riqueza de detalhes. Sua obra é uma das primeiras a oferecer uma visão externa sobre a vida indígena e as práticas culturais da época, tornando-se um importante testemunho histórico.</p>
         <img src="imagens - autores/Hans Staden.png" alt="">
-        <h3>Principal obra</h3>
+        <h3>Principal obra:</h3>
         <ul>
             <li>Duas Viagens ao Brasil (1557)</li>
         </ul>
