--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="Style_principal.css">
     <!-- <link rel="stylesheet" href="/Geral.css"> -->
 
-    <link rel="stylesheet" href="Script_principal.js">
+    <script src="Script_principal.js"></script>
 </head>
 <body>
     <header id="">
