Versão com as minhas mudanças nos autores e com o html de videos pronto e o css começado

--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -29,7 +29,9 @@
     </header>
 
     <nav>
-       <img src="/Site/Imagens/setinha - icon.png" alt=""> 
+       <a href="/Site/Inicio/Menu_quinhentismo.html">
+           <img src="/Site/Imagens/setinha - icon.png" alt=""> 
+       </a>
        <p>Contexto Histórico</p>
     </nav>
     
