--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -6,21 +6,17 @@
     <title>Quinhentismo - O que é?</title>
 
     <link rel="stylesheet" href="Style_principal.css">
-    <!-- <link rel="stylesheet" href="/Geral.css"> -->
+    <link rel="stylesheet" href="/Geral.css">
 
     <script src="Script_principal.js"></script>
 </head>
 <body>
-    <header id="">
-
-    </header>
-    
     <container id="pg1">
         <h1>Quinhentismo: A Primeira Manifestação Literária no Brasil</h1>
         <div id="txt1">
             <p>O Quinhentismo marca um período fundamental na literatura brasileira, representando a primeira expressão literária em nosso território. Conhecido como "literatura de informação", esse movimento foi responsável por descrever as novas terras descobertas pelos portugueses no século XVI, revelando a fauna, flora e culturas indígenas. Neste post, exploraremos as características, contexto histórico e os principais autores desse período fascinante.</p>
-        </div>
-        <img src="imagens - caracteristicas/chegada.jpeg" alt="">
+            <img src="imagens - caracteristicas/chegada.jpeg" alt="">
+        </div>   
     </container>
 
     <container id="pg2">
