versão com os vídeos

--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -64,6 +64,7 @@
                         A Carta do Descobrimento do Brasil (1500)
                     </li>
                 </ul>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/1ZjH7ByO524?si=oSNiDn0swNGFcj3x&amp;start=83" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         
         <br>
@@ -85,6 +86,7 @@
                     <li>Auto da festa do Natal (1561)</li>
                     <li> Feitos de Mem de Sá (1563)</li>
                 </ul>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/C3wQdy0hSLI?si=O8C-4OO_0K5jSgHm&amp;start=83" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <br>
             <hr>  
