Fiz um barfoot e coloquei o rodapé, além de atualizar outros detalhes, como o icone

--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quinhentismo - Principais autores e obras</title>
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
     <link rel="stylesheet" href="/Site/Geral.css">
     <link rel="stylesheet" href="Style_autores.css">
@@ -24,11 +25,11 @@
 <body>
 
     <header>
-        <img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef">
-        <img src="/Site/Imagens/quinhentisando - titulo.png" alt="">
+        <a href=""><img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef"></a>
+        <a href="../Inicio/Menu_quinhentismo.html"><img src="/Site/Imagens/quinhentisando - titulo.png" alt=""></a>
         <div>
-            <img src="/Site/Imagens/youtube - icon - certo.png" alt="">
-            <img src="/Site/Imagens/mail - icon -certo.png" alt="">
+            <a href=""><img src="/Site/Imagens/youtube - icon - certo.png" alt=""></a>
+            <a href=""><img src="/Site/Imagens/mail - icon -certo.png" alt=""></a>
         </div>
     </header>
 
@@ -129,6 +130,63 @@
             </div>
            
         </div>
+        <br>
+        <barfloor>
+            <div id="barra">
+                <a href="../Quinhentismo_contexto_histórico/contexto_minha_versao.html" class="bloco">
+                    <
+                </a>
+                <a href="../Quinhentismo/Quinhentismo_principal.html" class="bloco">
+                    1
+                </a>
+                <a href="../Quinhentismo_contexto_histórico/contexto_minha_versao.html" class="bloco">
+                    2
+                </a>
+                <num href="../Quinhentismo_autores/Autores.html" >
+                    3
+                </num>
+                <a href="../Quinhentismo_videos/videos.html" class="bloco">
+                    4
+                </a>
+                <a href="../Quinhentismo_videos/videos.html" class="bloco">
+                    >
+                </a>
+            </div>
+        </barfloor>
     </conteiner>
+    <br><br>
+    <footer>
+        <box>
+        <div>
+        <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
+        <h4>-Antônio Gomes Lacerda</h4>
+        </div>
+            <div>
+                <h3>Explore</h3>
+                <a href="../Inicio/Menu_quinhentismo.html">
+                    <p>Quinhentismo - Inicio</p>
+                </a>
+                <a href="../Somos/Somos.html">
+                    <p>Sobre nós</p>
+                </a>
+                <a href="../referencias/fontes.html">
+                    <p>Referências</p>
+                </a>
+                <a href="Autores.html">
+                    <p>Voltar para o começo</p>
+                </a>
+            </div>
+            <div>
+                <h3>Descubra</h3>
+                <a href="">
+                    <p>Classicismo: vídeo</p>
+                </a>
+            </div>
+        </box>
+        <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
+    </footer>
+
+    <br>
+
 </body>
 </html>
