--- a/Site/Quinhentismo_videos/videos.html
+++ b/Site/Quinhentismo_videos/videos.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quinhentismo - vídeos</title>
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
 
-
-
-
-    
     <link rel="stylesheet" href="/Site/Geral.css">
     <link rel="stylesheet" href="Style_videos.css">
 
@@ -24,19 +21,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
-
-
-
-
 </head>
 <body>
 
     <header>
-        <img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef">
-        <img src="/Site/Imagens/quinhentisando - titulo.png" alt="">
+        <a href=""><img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef"></a>
+        <a href="../Inicio/Menu_quinhentismo.html"><img src="/Site/Imagens/quinhentisando - titulo.png" alt=""></a>
         <div>
-            <img src="/Site/Imagens/youtube - icon - certo.png" alt="">
-            <img src="/Site/Imagens/mail - icon -certo.png" alt="">
+            <a href=""><img src="/Site/Imagens/youtube - icon - certo.png" alt=""></a>
+            <a href=""><img src="/Site/Imagens/mail - icon -certo.png" alt=""></a>
         </div>
     </header>
 
@@ -63,9 +56,65 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/mOPltnaYBNg?si=gCOEj4kJ6UYT2hph" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/vDrPmeYNe1k?si=AZ-jh9DOVcWJaF6B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br>
+    <br>
+    <br>
+    <barfloor>
+        <div id="barra">
+            <a href="../Quinhentismo_autores/Autores.html" class="bloco">
+                <
+            </a>
+            <a href="../Quinhentismo/Quinhentismo_principal.html" class="bloco">
+                1
+            </a>
+            <a href="../Quinhentismo_contexto_histórico/contexto_minha_versao.html" class="bloco">
+                2
+            </a>
+            <a href="../Quinhentismo_autores/Autores.html" class="bloco">
+                3
+            </a>
+            <num href="../Quinhentismo_videos/videos.html">
+                4
+            </num>
+            <a href="videos.html" class="bloco">
+                >
+            </a>
+        </div>
+    </barfloor>
+    <br>
+    <br>
+    <footer>
+        <box>
+        <div>
+        <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
+        <h4>-Antônio Gomes Lacerda</h4>
+        </div>
+            <div>
+                <h3>Explore</h3>
+                <a href="../Inicio/Menu_quinhentismo.html">
+                    <p>Quinhentismo - Inicio</p>
+                </a>
+                <a href="../Somos/Somos.html">
+                    <p>Sobre nós</p>
+                </a>
+                <a href="../referencias/fontes.html">
+                    <p>Referências</p>
+                </a>
+                <a href="videos.html">
+                    <p>Voltar para o começo</p>
+                </a>
+            </div>
+            <div>
+                <h3>Descubra</h3>
+                <a href="">
+                    <p>Classicismo: vídeo</p>
+                </a>
+            </div>
+        </box>
+        <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
+    </footer>
 
     <br>
-    <br>
-    <br>
+
 </body>
 </html>
