--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -22,10 +22,10 @@
 
     <header>
         <img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef">
-        <img src="/Site/Imagens/quinhentisando - titulo.png" alt="">
+        <a href="../Inicio/Menu_quinhentismo.html"><img src="/Site/Imagens/quinhentisando - titulo.png" alt=""></a>
         <div>
-            <img src="/Site/Imagens/youtube - icon - certo.png" alt="">
-            <img src="/Site/Imagens/mail - icon -certo.png" alt="">
+            <a href=""><img src="/Site/Imagens/youtube - icon - certo.png" alt=""></a>
+            <a href=""><img src="/Site/Imagens/mail - icon -certo.png" alt=""></a>
         </div>
     </header>
 
@@ -95,7 +95,7 @@
         <div>
             <h2>Time de desenvolvimento</h2>
             <br>
-            <p>Nosso time de desenvolvimento é composto por Karina Shimoiizaka Martins, que trabalhou no HTML e CSS das páginas; Theo Correia Martins, responsável pelo JavaScript; e Matheus Hideki Oshiro Ueno, que cuidou do design do site. Cada um contribuiu com suas habilidades específicas para criar um blog funcional e bem estruturado.</p>
+            <p>Nosso time de desenvolvimento é composto por Karina Shimoiizaka Martins, que trabalhou no HTML e CSS das páginas; Theo Correia Martins, responsável pelo CSS e JavaScript; e a dupla do Matheus Hideki Oshiro Ueno com o Gustavo Munhoz Adario Jovelli, que cuidaram do design do site. Cada um contribuiu com suas habilidades específicas para criar um blog funcional e bem estruturado.</p>
         </div>
     </div>
 
@@ -117,36 +117,47 @@
         <h2>Nossos contatos</h2>
         <p>Entre em contato conosco ou dê uma olhadinha na nossa página no YouTube!</p>
         <div>
-            <img src="/Site/Imagens/email icon.png" alt="" id="email">
+            <a href=""><img src="/Site/Imagens/email icon.png" alt="" id="email"></a>
 
-            <img id="youtube" src="/Site/Imagens/youtbe - imagem.png" alt="">
+            <a href=""><img id="youtube" src="/Site/Imagens/youtbe - imagem.png" alt=""></a>
         </div>
     </div>
 
 
 
-        <footer>
-            <box>
+    <footer>
+        <box>
+        <div>
+        <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
+        <h4>-Antônio Gomes Lacerda</h4>
+        </div>
             <div>
-            <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
-            <h4>-Antônio Gomes Lacerda</h4>
-            </div>
-                <div>
-                    <h3>Explore</h3>
-                    <p>Voltar para o ínicio</p>
+                <h3>Explore</h3>
+                <a href="../Inicio/Menu_quinhentismo.html">
+                    <p>Quinhentismo - Inicio</p>
+                </a>
+                <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
+                </a>
+                <a href="../referencias/fontes.html">
                     <p>Referências</p>
-                    <p>Quinhentismo</p>
-                </div>
-                <div>
-                    <h3>Descubra</h3>
+                </a>
+                <a href="Somos.html">
+                    <p>Voltar para o começo</p>
+                </a>
+            </div>
+            <div>
+                <h3>Descubra</h3>
+                <a href="">
                     <p>Classicismo: vídeo</p>
-                </div>
-            </box>
-            <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
-        </footer>
+                </a>
+            </div>
+        </box>
+        <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
+    </footer>
 
     <br>
+
     
 </body>
 </html>
