--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quinhentismo - Menu</title>
-    <link rel="stylesheet" href="Style_menu_quinhentismo.css">
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
+
     <link rel="stylesheet" href="/Site/Geral.css">
+    <link rel="stylesheet" href="Style_menu_quinhentismo.css">
+    
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,16 +20,12 @@
 </head>
 <body>
 
-
-
-
-
     <header>
-        <img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef">
-        <img src="/Site/Imagens/quinhentisando - titulo.png" alt="">
+        <a href=""><img src="/Site/Imagens/Simbolo - JEF.jpg" alt="" id="jef"></a>
+        <a href="Menu_quinhentismo.html"><img src="/Site/Imagens/quinhentisando - titulo.png" alt=""></a>
         <div>
-            <img src="/Site/Imagens/youtube - icon - certo.png" alt="">
-            <img src="/Site/Imagens/mail - icon -certo.png" alt="">
+            <a href=""><img src="/Site/Imagens/youtube - icon - certo.png" alt=""></a>
+            <a href=""><img src="/Site/Imagens/mail - icon -certo.png" alt=""></a>
         </div>
     </header>
 
@@ -42,19 +41,17 @@
 
 
 
-
-
-    <a href="/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html">
-        <div class="quadradoDeConteudo" id="contexto">
-            <div>
-                <h2>Contexto histórico</h2>
-            </div>
-        </div>
-    </a>
     <a href="/Site/Quinhentismo/Quinhentismo_principal.html">
         <div class="quadradoDeConteudo" id="caracteristicas">
             <div>
                 <h2>Características</h2>
+            </div>
+        </div>
+    </a>
+    <a href="/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html">
+        <div class="quadradoDeConteudo" id="contexto">
+            <div>
+                <h2>Contexto histórico</h2>
             </div>
         </div>
     </a>
@@ -72,30 +69,41 @@
             </div>
         </div>
     </a>
-
+    <br><br>
 
     <footer>
-            <box>
+        <box>
+        <div>
+        <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
+        <h4>-Antônio Gomes Lacerda</h4>
+        </div>
             <div>
-            <blockquote> "A educação não tem preço. Sua falta tem custo." </blockquote>
-            <h4>-Antônio Gomes Lacerda</h4>
-            </div>
-                <div>
-                    <h3>Explore</h3>
-                    <p>Voltar para o ínicio</p>
+                <h3>Explore</h3>
+                <a href="Menu_quinhentismo.html">
+                    <p>Quinhentismo - Inicio</p>
+                </a>
+                <a href="../Somos/Somos.html">
                     <p>Sobre nós</p>
+                </a>
+                <a href="../referencias/fontes.html">
                     <p>Referências</p>
-                    <p>Quinhentismo</p>
-                </div>
-                <div>
-                    <h3>Descubra</h3>
+                </a>
+                <a href="Menu_quinhentismo.html">
+                    <p>Voltar para o começo</p>
+                </a>
+            </div>
+            <div>
+                <h3>Descubra</h3>
+                <a href="">
                     <p>Classicismo: vídeo</p>
-                </div>
-            </box>
-            <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
+                </a>
+            </div>
+        </box>
+        <p id="copy">&copy; Copyrigth 2024 muito verdadeira. All rigths reserved</p>
     </footer>
 
     <br>
+
 
 
 
