--- a/Site/Quinhentismo/Quinhentismo_principal.html
+++ b/Site/Quinhentismo/Quinhentismo_principal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinhentismo - O que é?</title>
+    <title>Quinhentismo - Características</title>
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
     
     <link rel="stylesheet" href="/Site/Geral.css">
