minha versão com os títulos certos e as imagens das páginas

--- a/Site/Quinhentismo_autores/Autores.html
+++ b/Site/Quinhentismo_autores/Autores.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinhentismo - Principais autores e obras</title>
+    <title>Quinhentizando - Principais autores e obras</title>
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
     <link rel="stylesheet" href="/Site/Geral.css">
