--- a/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
+++ b/Site/Quinhentismo_contexto_histórico/contexto_minha_versao.html
@@ -15,7 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
 
-    <title>Quinhentismo - Contexto</title>
+    <title>Quinhentizando - Contexto histórico</title>
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 </head>
 <body>
 
