--- a/Site/Somos/Somos.html
+++ b/Site/Somos/Somos.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
 
-    <title>Quinhentismo - Sobre nós</title>
+    <title>Quinhentizando - Sobre nós</title>
 </head>
 <body>
 
