--- a/Site/referencias/fontes.html
+++ b/Site/referencias/fontes.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinhentismo - referencias</title>
+    <title>Quinhentizando - Referências</title>
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
     <link rel="stylesheet" href="/Site/Geral.css">
 
     <script src="Script_videos.js"></script>
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
 
 
