--- a/Site/Inicio/Menu_quinhentismo.html
+++ b/Site/Inicio/Menu_quinhentismo.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinhentismo - Menu</title>
+    <title>Quinhentizando - Menu</title>
+    <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
     <link rel="stylesheet" href="/Site/Geral.css">
