--- a/Site/Quinhentismo_videos/videos.html
+++ b/Site/Quinhentismo_videos/videos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quinhentismo - vídeos</title>
+    <title>Quinhentizando - Vídeos</title>
     <link rel="icon" href="/Site/Imagens/icone-site.png" type="image/png">
 
 
